--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
+    "react": "^18.2.0",
     "@google/genai": "^1.25.0",
-    "react-dom": "^19.2.0",
-    "pdfjs-dist": "^5.4.296"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
